vlib/v/checker/tests/assign_expr_undefined_err_m.vv
fn main(){
	a := 'add'
	n := 2
	x := match a {
		'add'{ n + x }
		else{0}
	}
	println(x)
}
